Perkin-UAT/force-app/main/default/objects/Custom_Exception__c/Custom_Exception__c.object-meta.xml
<CustomObject>
    <description>To Get the Batch_EnableRenewalQuotedOnContracts Class  Exception logs in this Custom object</description>
    <label>Custom Exception</label>
    <nameField>
        <label>Custom Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>