Perkin-UAT/force-app/main/default/objects/Custom_Exception__c/fields/B2B_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>B2B_Subscriptions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B Subscriptions</label>
    <referenceTo>B2B_Subscriptions__c</referenceTo>
    <relationshipLabel>Custom Exceptions</relationshipLabel>
    <relationshipName>Custom_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>