Perkin-UAT/force-app/main/default/objects/Custom_Exception__c/fields/Cart_Id__c.field-meta.xml
<CustomField>
    <fullName>Cart_Id__c</fullName>
    <description>To store cart id.</description>
    <label>Cart Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>