Perkin-UAT/force-app/main/default/objects/Custom_Exception__c/fields/Exception_Messages__c.field-meta.xml
<CustomField>
    <fullName>Exception_Messages__c</fullName>
    <label>Exception Messages</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>