Perkin-UAT/force-app/main/default/objects/Custom_Exception__c/fields/Extended_Status__c.field-meta.xml
<CustomField>
    <fullName>Extended_Status__c</fullName>
    <label>Extended Status</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>