Perkin-UAT/force-app/main/default/objects/Custom_Exception__c/fields/Govt_Limit_In_Executing_Code__c.field-meta.xml
<CustomField>
    <fullName>Govt_Limit_In_Executing_Code__c</fullName>
    <label>Govt Limit In Executing Code</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>