Perkin-UAT/force-app/main/default/objects/Custom_Exception__c/fields/Request_JSON__c.field-meta.xml
<CustomField>
    <fullName>Request_JSON__c</fullName>
    <label>Request JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>