Perkin-UAT/force-app/main/default/objects/Custom_Exception__c/fields/Response_JSON__c.field-meta.xml
<CustomField>
    <fullName>Response_JSON__c</fullName>
    <label>Response JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>